--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
       "moduleResolution": "Node",
       "noEmit": true,
       "noImplicitReturns": true,
-      "strict": false
+      "strict": true
     },
     "include": ["./**/*"]
 }
