--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
       "module": "NodeNext",
       "moduleResolution": "Node",
       "noEmit": true,
-      "noImplicitReturns": true
+      "noImplicitReturns": true,
+      "strict": true
     },
     "include": ["./**/*"]
 }
