--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
       "moduleResolution": "Node",
       "noEmit": true,
       "noImplicitReturns": true,
-      "strict": true
+      "strict": true,
+      "esModuleInterop": true,
     },
     "include": ["./**/*"]
 }
