--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,6 +3,8 @@ sonar.organization=hackerembassy
 sonar.projectName=hackerembassy-tg-bot
 sonar.projectVersion=1.0
 
+sonar.exclusions=tests/**/*
+
 sonar.issue.ignore.multicriteria=e1
 
 sonar.issue.ignore.multicriteria.e1.ruleKey=javascript:S2094
