--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,6 +10,6 @@ sonar.issue.ignore.multicriteria=e1
 sonar.issue.ignore.multicriteria.e1.ruleKey=javascript:S2094
 sonar.issue.ignore.multicriteria.e1.resourceKey=**/*.js
 
-sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
 
