--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -18,7 +18,7 @@ jobs:
           node-version: '18.16.0'
           cache: 'npm'
       - run: npm ci
-      - run: npm test
+      - run: npm test:ci
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
