--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lint-fix": "eslint '--fix **/*.{ts,js}'",
     "pretty": "prettier --write '**/*.{ts,js}'",
     "test": "jest",
+    "test:ci": "jest --collectCoverage",
     "coverage": "jest --collectCoverage"
   },
   "author": "Nick Kiselev",
