--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start-service": "npx ts-node embassyApi.ts",
     "start-service-background": "nohup npx ts-node embassyApi.ts &",
     "embassy-api-service": "/usr/bin/npx ts-node embassyApi.ts",
-    "dev": "nodemon app.ts",
+    "dev": "mkdir -p ./data/db/; nodemon app.ts",
     "dev-service": "nodemon embassyApi.ts",
     "dev-both": "run-p dev dev-service",
     "stop-embassy-api": "skill -c 'nohup npx ts-node embassyApi.ts &'",
