--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "node-telegram-bot-api": "^0.60.0",
     "nodemon": "^2.0.20",
     "ping": "^0.4.4",
+    "rrule": "^2.7.2",
     "ts-node": "^10.9.1",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
@@ -70,6 +71,7 @@
     "@types/node-rsa": "^1.1.1",
     "@types/node-telegram-bot-api": "^0.61.6",
     "@types/ping": "^0.4.1",
+    "@types/rrule": "^2.2.9",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
     "eslint": "^8.42.0",
