sendPhotos and all cams command

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
       "allowJs": true,
       "checkJs": true,
       "target": "ES2022",
-      "module": "NodeNext",
+      "module": "None",
       "moduleResolution": "Node",
       "noEmit": true,
       "noImplicitReturns": true,
