--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "node-telegram-bot-api": "^0.60.0",
     "nodemon": "^2.0.20",
     "ping": "^0.4.4",
+    "tmp-promise": "^3.0.3",
     "ts-node": "^10.9.1",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
