* nullable and optional type aliases * fixed out for closed space * changed status updated date translation to simplify tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
       "noImplicitReturns": true,
       "strict": true,
       "esModuleInterop": true,
+      "typeRoots" : ["./node_modules/@types", "./typings"]
     },
     "include": ["./**/*"]
 }
