--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "i18next-fs-backend": "^2.1.5",
     "local-devices": "^4.0.0",
     "luci-rpc": "^1.0.5",
+    "luxon": "^3.4.3",
     "mqtt": "^4.3.7",
     "node-fetch": "^2.6.8",
     "node-rsa": "^1.1.1",
@@ -67,6 +68,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.4",
+    "@types/luxon": "^3.3.2",
     "@types/node": "^14.18.36",
     "@types/node-fetch": "^2.6.4",
     "@types/node-rsa": "^1.1.1",
