--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "pretty": "prettier --write '**/*.{ts,js}'",
     "test": "jest",
     "test:ci": "jest --collectCoverage",
-    "coverage": "jest --collectCoverage",
-    "debug-file": "npx ts-node"
+    "coverage": "jest --collectCoverage"
   },
   "author": "Nick Kiselev",
   "license": "ISC",
