Added new variable to docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - BOTDEBUG=true
       - HACKERBOTTOKEN=$HACKERBOTTOKEN
       - UNLOCKKEY=$UNLOCKKEY
+      - HACKERGOOGLEAPIKEY=$HACKERGOOGLEAPIKEY
 volumes:
   data:
     name: "hackerembassy-bot-data"
