Added command to fetch closest events (#27)
* Added rrule dependency

* Added .DS_Store to gitignore

* Added new debug option

* Added new env variable for Google API key

* Stub for eventsExporter

* rrules are parsed correctly now

* Added getting new events only

* Exported type

* Added command to get upcoming events from calendar

* Fixed Sonar issue

* Removed unnecessary debug config

* Added more aliases

* Refactored basic.ts a bit

* Removed unused debug script

* Added new handlers

* Renamed file

* Changed send message method

* Refactored googleCalnendar.ts

* Simplified textGenerators.ts

* Added new variable to docker-compose.yml

* Ugh

---------

Co-authored-by: Nick Kiselev <korn9509@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
             - HACKERBOTTOKEN=$HACKERBOTTOKEN
             - UNLOCKKEY=$UNLOCKKEY
             - GUESTKEY=$GUESTKEY
+            - HACKERGOOGLEAPIKEY=$HACKERGOOGLEAPIKEY
 volumes:
     data:
         name: "hackerembassy-bot-data"
