--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "i18next-fs-backend": "^2.1.5",
     "local-devices": "^4.0.0",
     "luci-rpc": "^1.0.5",
+    "luxon": "^3.4.3",
     "mqtt": "^4.3.7",
     "node-fetch": "^2.6.8",
     "node-rsa": "^1.1.1",
@@ -54,6 +55,7 @@
     "node-telegram-bot-api": "^0.60.0",
     "nodemon": "^2.0.20",
     "ping": "^0.4.4",
+    "rrule": "^2.7.2",
     "tmp-promise": "^3.0.3",
     "ts-node": "^10.9.1",
     "winston": "^3.8.2",
@@ -66,11 +68,13 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.4",
+    "@types/luxon": "^3.3.2",
     "@types/node": "^14.18.36",
     "@types/node-fetch": "^2.6.4",
     "@types/node-rsa": "^1.1.1",
     "@types/node-telegram-bot-api": "^0.61.6",
     "@types/ping": "^0.4.1",
+    "@types/rrule": "^2.2.9",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
     "eslint": "^8.42.0",
