--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "luxon": "^3.4.3",
     "mqtt": "^4.3.7",
     "node-fetch": "^2.6.8",
+    "node-html-markdown": "^1.3.0",
     "node-rsa": "^1.1.1",
     "node-ssh": "^13.1.0",
     "node-telegram-bot-api": "^0.60.0",
