--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,10 +7,11 @@
     "extends": [
         "eslint:recommended",
         "plugin:@typescript-eslint/eslint-recommended",
-        "plugin:@typescript-eslint/recommended"
+        "plugin:@typescript-eslint/recommended-type-checked"
       ],
     "plugins": ["prettier", "simple-import-sort", "@typescript-eslint"],
     "parserOptions": {
+        "project": true,
         "ecmaVersion": "latest",
         "sourceType": "module",
         "parser": "@typescript-eslint/parser"
@@ -19,10 +20,25 @@
         "prettier/prettier": ["warn"],
         "simple-import-sort/imports": "error",
         "simple-import-sort/exports": "error",
+        "@typescript-eslint/no-unnecessary-condition": "error",
+        "@typescript-eslint/no-unsafe-argument": "warn",
+        "@typescript-eslint/no-unsafe-assignment": "warn",
+        "@typescript-eslint/no-unsafe-member-access": "warn",
+        "@typescript-eslint/no-unsafe-call": "warn",
         "@typescript-eslint/no-var-requires": "off",
         "@typescript-eslint/no-this-alias": "off",
         "@typescript-eslint/ban-ts-comment": "off",
-        "@typescript-eslint/no-explicit-any": "off"
-
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/no-misused-promises": "off",
+        "@typescript-eslint/no-floating-promises": "off",
+        "@typescript-eslint/unbound-method": "off",
+        "@typescript-eslint/no-unsafe-return": "off",
+        "no-duplicate-imports":"error",
+        "require-await":"error",
+        "eqeqeq":"error",
+        "no-unneeded-ternary":"error",
+        "no-var":"error",
+        "prefer-const":"error",
+        "no-console":"warn"
     }
 }
