--- a/package.json
+++ b/package.json
@@ -1,97 +1,98 @@
 {
-  "name": "hacker-embassy-bot",
-  "version": "3.0.0",
-  "description": "Hacker Embassy management bot",
-  "main": "app.ts",
-  "scripts": {
-    "start": "npx ts-node app.ts",
-    "start-background": "nohup npx ts-node app.ts &",
-    "start-service": "npx ts-node embassyApi.ts",
-    "start-service-background": "nohup npx ts-node embassyApi.ts &",
-    "embassy-api-service": "/usr/bin/npx ts-node embassyApi.ts",
-    "dev": "nodemon app.ts",
-    "dev-service": "nodemon embassyApi.ts",
-    "dev-both": "run-p dev dev-service",
-    "stop-embassy-api": "skill -c 'nohup npx ts-node embassyApi.ts &'",
-    "git": "git add * && git commit && git push",
-    "git-redo": "git add * && git commit --amend && git push --force",
-    "update-and-start": "npm run kill && git pull && npm i && npm run start-bot-background",
-    "start-api-https": "sudo caddy start --config ./deploy/api/Caddyfile 2>/dev/null",
-    "kill": "skill -c nohup npx ts-node app.ts &",
-    "backup": "mkdir ./data/backup -p && cp ./data/db/data.db ./data/backup/data`date +\"%H%M%S%m%d%Y\"`.db 2>/dev/null",
-    "reset": "mkdir ./data/backup -p && mv ./data/data.db ./data/backup/data`date +\"%H%M%S%m%d%Y\"`.db 2>/dev/null && cp ./data/sample.db ./data/data.db",
-    "init-dev": "npx ts-node ./scripts/initDev.ts",
-    "prepare": "husky install",
-    "lint": "eslint '**/*.{ts,js}'",
-    "lint-fix": "eslint '--fix **/*.{ts,js}'",
-    "pretty": "prettier --write '**/*.{ts,js}'",
-    "test": "jest",
-    "test:ci": "jest --collectCoverage",
-    "coverage": "jest --collectCoverage"
-  },
-  "author": "Nick Kiselev",
-  "license": "ISC",
-  "dependencies": {
-    "better-sqlite3": "^8.0.1",
-    "body-parser": "^1.20.1",
-    "chartjs-to-image": "^1.1.0",
-    "config": "^3.3.8",
-    "cors": "^2.8.5",
-    "crypto-convert": "^2.1.4",
-    "d": "^1.0.1",
-    "dotenv": "^16.0.3",
-    "easy-currencies": "^1.7.0",
-    "express": "^4.18.2",
-    "fast-csv": "^4.3.6",
-    "i18next": "^23.1.0",
-    "i18next-fs-backend": "^2.1.5",
-    "local-devices": "^4.0.0",
-    "luci-rpc": "^1.0.5",
-    "luxon": "^3.4.3",
-    "mqtt": "^4.3.7",
-    "node-fetch": "^2.6.8",
-    "node-html-markdown": "^1.3.0",
-    "node-rsa": "^1.1.1",
-    "node-ssh": "^13.1.0",
-    "node-telegram-bot-api": "^0.60.0",
-    "nodemon": "^2.0.20",
-    "ping": "^0.4.4",
-    "rrule": "^2.7.2",
-    "tmp-promise": "^3.0.3",
-    "ts-node": "^10.9.1",
-    "winston": "^3.8.2",
-    "winston-daily-rotate-file": "^4.7.1"
-  },
-  "devDependencies": {
-    "@jest/globals": "^29.6.4",
-    "@types/better-sqlite3": "^7.6.4",
-    "@types/config": "^3.3.0",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.4",
-    "@types/luxon": "^3.3.2",
-    "@types/node": "^14.18.36",
-    "@types/node-fetch": "^2.6.4",
-    "@types/node-rsa": "^1.1.1",
-    "@types/node-telegram-bot-api": "^0.61.6",
-    "@types/ping": "^0.4.1",
-    "@types/rrule": "^2.2.9",
-    "@typescript-eslint/eslint-plugin": "^6.4.1",
-    "@typescript-eslint/parser": "^6.4.1",
-    "eslint": "^8.42.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "husky": "^8.0.0",
-    "lint-staged": "^13.2.2",
-    "nock": "^13.3.3",
-    "npm-run-all": "^4.1.5",
-    "ts-jest": "^29.1.1"
-  },
-  "lint-staged": {
-    "**/*.{js,jsx,ts,tsx}": [
-      "npx prettier --write",
-      "npx eslint --fix"
-    ]
-  }
+    "name": "hacker-embassy-bot",
+    "version": "3.0.0",
+    "description": "Hacker Embassy management bot",
+    "main": "app.ts",
+    "scripts": {
+        "start": "npx ts-node app.ts",
+        "start-background": "nohup npx ts-node app.ts &",
+        "start-service": "npx ts-node embassyApi.ts",
+        "start-service-background": "nohup npx ts-node embassyApi.ts &",
+        "embassy-api-service": "/usr/bin/npx ts-node embassyApi.ts",
+        "dev": "nodemon app.ts",
+        "dev-service": "nodemon embassyApi.ts",
+        "dev-both": "run-p dev dev-service",
+        "stop-embassy-api": "skill -c 'nohup npx ts-node embassyApi.ts &'",
+        "git": "git add * && git commit && git push",
+        "git-redo": "git add * && git commit --amend && git push --force",
+        "update-and-start": "npm run kill && git pull && npm i && npm run start-bot-background",
+        "start-api-https": "sudo caddy start --config ./deploy/api/Caddyfile 2>/dev/null",
+        "kill": "skill -c nohup npx ts-node app.ts &",
+        "backup": "mkdir ./data/backup -p && cp ./data/db/data.db ./data/backup/data`date +\"%H%M%S%m%d%Y\"`.db 2>/dev/null",
+        "reset": "mkdir ./data/backup -p && mv ./data/data.db ./data/backup/data`date +\"%H%M%S%m%d%Y\"`.db 2>/dev/null && cp ./data/sample.db ./data/data.db",
+        "init-dev": "npx ts-node ./scripts/initDev.ts",
+        "prepare": "husky install",
+        "lint": "eslint '**/*.{ts,js}'",
+        "lint-fix": "eslint '--fix **/*.{ts,js}'",
+        "pretty": "prettier --write '**/*.{ts,js}'",
+        "test": "jest",
+        "test:ci": "jest --collectCoverage",
+        "coverage": "jest --collectCoverage"
+    },
+    "author": "Nick Kiselev",
+    "license": "ISC",
+    "dependencies": {
+        "better-sqlite3": "^8.0.1",
+        "body-parser": "^1.20.1",
+        "chartjs-to-image": "^1.1.0",
+        "config": "^3.3.8",
+        "cors": "^2.8.5",
+        "crypto-convert": "^2.1.4",
+        "d": "^1.0.1",
+        "dotenv": "^16.0.3",
+        "easy-currencies": "^1.7.0",
+        "express": "^4.18.2",
+        "fast-csv": "^4.3.6",
+        "i18next": "^23.1.0",
+        "i18next-fs-backend": "^2.1.5",
+        "local-devices": "^4.0.0",
+        "luci-rpc": "^1.0.5",
+        "luxon": "^3.4.3",
+        "mqtt": "^4.3.7",
+        "node-fetch": "^2.6.8",
+        "node-html-markdown": "^1.3.0",
+        "node-rsa": "^1.1.1",
+        "node-ssh": "^13.1.0",
+        "node-telegram-bot-api": "^0.60.0",
+        "nodemon": "^3.0.1",
+        "ping": "^0.4.4",
+        "rrule": "^2.7.2",
+        "tmp-promise": "^3.0.3",
+        "ts-node": "^10.9.1",
+        "winston": "^3.8.2",
+        "winston-daily-rotate-file": "^4.7.1"
+    },
+    "devDependencies": {
+        "@jest/globals": "^29.6.4",
+        "@types/better-sqlite3": "^7.6.4",
+        "@types/config": "^3.3.0",
+        "@types/cors": "^2.8.13",
+        "@types/express": "^4.17.17",
+        "@types/jest": "^29.5.4",
+        "@types/luxon": "^3.3.2",
+        "@types/node": "^14.18.36",
+        "@types/node-fetch": "^2.6.4",
+        "@types/node-rsa": "^1.1.1",
+        "@types/node-telegram-bot-api": "^0.61.6",
+        "@types/ping": "^0.4.1",
+        "@types/rrule": "^2.2.9",
+        "@typescript-eslint/eslint-plugin": "^6.4.1",
+        "@typescript-eslint/parser": "^6.4.1",
+        "eslint": "^8.42.0",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-simple-import-sort": "^10.0.0",
+        "husky": "^8.0.0",
+        "jest-fetch-mock": "^3.0.3",
+        "lint-staged": "^13.2.2",
+        "nock": "^13.3.3",
+        "npm-run-all": "^4.1.5",
+        "ts-jest": "^29.1.1"
+    },
+    "lint-staged": {
+        "**/*.{js,jsx,ts,tsx}": [
+            "npx prettier --write",
+            "npx eslint --fix"
+        ]
+    }
 }
