Moved api files and added Swagger

--- a/package.json
+++ b/package.json
@@ -2,22 +2,22 @@
     "name": "hacker-embassy-bot",
     "version": "3.0.0",
     "description": "Hacker Embassy management bot",
-    "main": "app.ts",
+    "main": "bot.ts",
     "scripts": {
-        "start": "npx ts-node app.ts",
-        "start-background": "nohup npx ts-node app.ts &",
-        "start-service": "npx ts-node embassyApi.ts",
-        "start-service-background": "nohup npx ts-node embassyApi.ts &",
-        "embassy-api-service": "/usr/bin/npx ts-node embassyApi.ts",
-        "dev": "nodemon app.ts",
-        "dev-service": "nodemon embassyApi.ts",
+        "start": "npx ts-node bot.ts",
+        "start-background": "nohup npx ts-node bot.ts &",
+        "start-service": "npx ts-node embassy.ts",
+        "start-service-background": "nohup npx ts-node embassy.ts &",
+        "embassy-api-service": "/usr/bin/npx ts-node embassy.ts",
+        "dev": "nodemon bot.ts",
+        "dev-service": "nodemon embassy.ts",
         "dev-both": "run-p dev dev-service",
-        "stop-embassy-api": "skill -c 'nohup npx ts-node embassyApi.ts &'",
+        "stop-embassy-api": "skill -c 'nohup npx ts-node embassy.ts &'",
         "git": "git add * && git commit && git push",
         "git-redo": "git add * && git commit --amend && git push --force",
         "update-and-start": "npm run kill && git pull && npm i && npm run start-bot-background",
         "start-api-https": "sudo caddy start --config ./deploy/api/Caddyfile 2>/dev/null",
-        "kill": "skill -c nohup npx ts-node app.ts &",
+        "kill": "skill -c nohup npx ts-node bot.ts &",
         "backup": "mkdir ./data/backup -p && cp ./data/db/data.db ./data/backup/data`date +\"%H%M%S%m%d%Y\"`.db 2>/dev/null",
         "reset": "mkdir ./data/backup -p && mv ./data/data.db ./data/backup/data`date +\"%H%M%S%m%d%Y\"`.db 2>/dev/null && cp ./data/sample.db ./data/data.db",
         "init-dev": "npx ts-node ./scripts/initDev.ts",
@@ -27,7 +27,8 @@
         "pretty": "prettier --write '**/*.{ts,js}'",
         "test": "jest",
         "test:ci": "jest --collectCoverage",
-        "coverage": "jest --collectCoverage"
+        "coverage": "jest --collectCoverage",
+        "swagger": "npx ts-node ./api/swagger.ts"
     },
     "author": "Nick Kiselev",
     "license": "ISC",
@@ -57,6 +58,7 @@
         "nodemon": "^3.0.1",
         "ping": "^0.4.4",
         "rrule": "^2.7.2",
+        "swagger-ui-express": "^5.0.0",
         "tmp-promise": "^3.0.3",
         "ts-node": "^10.9.1",
         "winston": "^3.8.2",
@@ -76,6 +78,7 @@
         "@types/node-telegram-bot-api": "^0.61.6",
         "@types/ping": "^0.4.1",
         "@types/rrule": "^2.2.9",
+        "@types/swagger-ui-express": "^4.1.4",
         "@typescript-eslint/eslint-plugin": "^6.4.1",
         "@typescript-eslint/parser": "^6.4.1",
         "eslint": "^8.42.0",
@@ -87,6 +90,7 @@
         "lint-staged": "^13.2.2",
         "nock": "^13.3.3",
         "npm-run-all": "^4.1.5",
+        "swagger-autogen": "^2.23.6",
         "ts-jest": "^29.1.1"
     },
     "lint-staged": {
