--- a/deploy/Containerfile
+++ b/deploy/Containerfile
@@ -1,5 +1,5 @@
 FROM docker.io/library/node:lts-alpine
-RUN apk add g++ make python
+RUN apk add --update --no-cache python3 && ln -sf python3 /usr/bin/python
 WORKDIR /app
 COPY . .
 RUN mv ./deploy/entrypoint.sh / &&\
