package.json cleaning, swc compiler

--- a/package.json
+++ b/package.json
@@ -4,20 +4,17 @@
     "description": "Hacker Embassy management bot",
     "main": "bot.ts",
     "scripts": {
-        "start": "npx ts-node bot.ts",
-        "start-background": "nohup npx ts-node bot.ts &",
-        "start-service": "npx ts-node embassy.ts",
-        "start-service-background": "nohup npx ts-node embassy.ts &",
-        "embassy-api-service": "/usr/bin/npx ts-node embassy.ts",
+        "start": "npx ts-node bot.ts --swc",
+        "start-background": "nohup npx ts-node bot.ts --swc &",
+        "start-service": "npx ts-node embassy.ts --swc",
+        "start-service-background": "nohup npx ts-node embassy.ts --swc &",
+        "embassy-api-service": "/usr/bin/npx ts-node embassy.ts --swc",
         "dev": "nodemon bot.ts",
         "dev-service": "nodemon embassy.ts",
         "dev-both": "run-p dev dev-service",
-        "stop-embassy-api": "skill -c 'nohup npx ts-node embassy.ts &'",
-        "git": "git add * && git commit && git push",
-        "git-redo": "git add * && git commit --amend && git push --force",
-        "update-and-start": "npm run kill && git pull && npm i && npm run start-bot-background",
+        "stop-embassy-api": "skill -c 'nohup npx ts-node embassy.ts --swc &'",
         "start-api-https": "sudo caddy start --config ./deploy/api/Caddyfile 2>/dev/null",
-        "kill": "skill -c nohup npx ts-node bot.ts &",
+        "kill": "skill -c nohup npx ts-node bot.ts --swc &",
         "backup": "mkdir ./data/backup -p && cp ./data/db/data.db ./data/backup/data`date +\"%H%M%S%m%d%Y\"`.db 2>/dev/null",
         "reset": "mkdir ./data/backup -p && mv ./data/data.db ./data/backup/data`date +\"%H%M%S%m%d%Y\"`.db 2>/dev/null && cp ./data/sample.db ./data/data.db",
         "init-dev": "npx ts-node ./scripts/initDev.ts",
@@ -27,7 +24,6 @@
         "pretty": "prettier --write '**/*.{ts,js}'",
         "test": "jest",
         "test:ci": "jest --collectCoverage",
-        "coverage": "jest --collectCoverage",
         "swagger": "npx ts-node ./api/swagger.ts"
     },
     "author": "Nick Kiselev",
@@ -56,6 +52,7 @@
         "node-telegram-bot-api": "^0.64.0",
         "nodemon": "^3.0.1",
         "ping": "^0.4.4",
+        "rm": "^0.1.8",
         "rrule": "^2.7.2",
         "swagger-ui-express": "^5.0.0",
         "tmp-promise": "^3.0.3",
@@ -84,13 +81,14 @@
         "@typescript-eslint/parser": "^6.4.1",
         "eslint": "^8.42.0",
         "eslint-config-prettier": "^8.8.0",
-        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-prettier": "^5.0.0",
         "eslint-plugin-simple-import-sort": "^10.0.0",
         "husky": "^8.0.0",
         "jest-fetch-mock": "^3.0.3",
         "lint-staged": "^13.2.2",
         "nock": "^13.3.3",
         "npm-run-all": "^4.1.5",
+        "prettier-eslint": "^16.2.0",
         "swagger-autogen": "^2.23.6",
         "ts-jest": "^29.1.1"
     },
