--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
             - GUESTKEY=$GUESTKEY
             - HACKERGOOGLEAPIKEY=$HACKERGOOGLEAPIKEY
             - OPENAIAPIKEY=$OPENAIAPIKEY
+            - WIKIJSAPIKEY=$WIKIJSAPIKEY
 volumes:
     data:
         name: "hackerembassy-bot-data"
