--- a/package.json
+++ b/package.json
@@ -2,19 +2,22 @@
     "name": "hacker-embassy-bot",
     "version": "3.0.0",
     "description": "Hacker Embassy management bot",
-    "main": "bot.ts",
+    "main": "bot.js",
     "scripts": {
-        "start": "npx ts-node bot.ts --swc",
-        "start-background": "nohup npx ts-node bot.ts --swc &",
-        "start-service": "npx ts-node embassy.ts --swc",
-        "start-service-background": "nohup npx ts-node embassy.ts --swc &",
-        "embassy-api-service": "/usr/bin/npx ts-node embassy.ts --swc",
+        "build": "tsc --skipLibCheck",
+        "postbuild": "node scripts/postBuild.mjs",
+        "start": "node dist/bot.js",
+        "start:ci": "node bot.js",
+        "start-background": "nohup node dist/bot.js &",
+        "start-service": "node dist/embassy.js",
+        "start-service-background": "nohup node dist/embassy.js &",
+        "embassy-api-service": "/usr/bin/node dist/embassy.js",
         "dev": "nodemon bot.ts",
         "dev-service": "nodemon embassy.ts",
         "dev-both": "run-p dev dev-service",
-        "stop-embassy-api": "skill -c 'nohup npx ts-node embassy.ts --swc &'",
+        "stop-embassy-api": "skill -c 'nohup node dist/embassy.js &'",
         "start-api-https": "sudo caddy start --config ./deploy/api/Caddyfile 2>/dev/null",
-        "kill": "skill -c nohup npx ts-node bot.ts --swc &",
+        "kill": "skill -c nohup node dist/bot.js &",
         "backup": "mkdir ./data/backup -p && cp ./data/db/data.db ./data/backup/data`date +\"%H%M%S%m%d%Y\"`.db 2>/dev/null",
         "reset": "mkdir ./data/backup -p && mv ./data/data.db ./data/backup/data`date +\"%H%M%S%m%d%Y\"`.db 2>/dev/null && cp ./data/sample.db ./data/data.db",
         "init-dev": "npx ts-node ./scripts/initDev.ts",
@@ -67,6 +70,7 @@
         "@types/config": "^3.3.0",
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
+        "@types/fs-extra": "^11.0.4",
         "@types/jest": "^29.5.4",
         "@types/luxon": "^3.3.2",
         "@types/node": "^14.18.36",
@@ -79,6 +83,7 @@
         "@types/wol": "^1.0.3",
         "@typescript-eslint/eslint-plugin": "^6.4.1",
         "@typescript-eslint/parser": "^6.4.1",
+        "fs-extra": "^11.2.0",
         "eslint": "^8.42.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-prettier": "^5.0.0",
@@ -90,7 +95,8 @@
         "npm-run-all": "^4.1.5",
         "prettier-eslint": "^16.2.0",
         "swagger-autogen": "^2.23.6",
-        "ts-jest": "^29.1.1"
+        "ts-jest": "^29.1.1",
+        "typescript": "^5.3.3"
     },
     "lint-staged": {
         "**/*.{js,jsx,ts,tsx}": [
