--- a/.github/workflows/app-deployment.yml
+++ b/.github/workflows/app-deployment.yml
@@ -34,13 +34,15 @@ jobs:
               uses: docker/metadata-action@v4
               with:
                   images: ghcr.io/${{ github.repository }}
-            - uses: docker/build-push-action@v4
+            - uses: docker/build-push-action@v5
               with:
                   context: .
                   file: ./deploy/Containerfile
                   push: true
                   tags: ${{ steps.metadata.outputs.tags }}
                   labels: ${{ steps.metadata.outputs.labels }}
+                  cache-from: type=gha
+                  cache-to: type=gha,mode=max
             - uses: ./.github/actions/deploy
               with:
                   ssh_user: ci
