--- a/.github/workflows/app-deployment.yml
+++ b/.github/workflows/app-deployment.yml
@@ -25,6 +25,7 @@ jobs:
             packages: write
         steps:
             - uses: actions/checkout@v3
+            - uses: docker/setup-buildx-action@v2
             - uses: docker/login-action@v2
               with:
                   registry: ghcr.io
