--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,6 @@
 {
     "printWidth": 130,
     "tabWidth": 4,
-    "arrowParens": "avoid"
+    "arrowParens": "avoid",
+    "trailingComma": "es5"
 }
