--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
         "start-service": "node dist/embassy.js",
         "start-service-background": "nohup node dist/embassy.js &",
         "embassy-api-service": "/usr/bin/node dist/embassy.js",
-        "dev": "nodemon bot.ts",
-        "dev-service": "nodemon embassy.ts",
+        "dev": "tsx watch bot.ts",
+        "dev-service": "tsx watch embassy.ts",
         "dev-both": "run-p dev dev-service",
         "stop-embassy-api": "skill -c 'nohup node dist/embassy.js &'",
         "start-api-https": "sudo caddy start --config ./deploy/api/Caddyfile 2>/dev/null",
@@ -83,11 +83,11 @@
         "@types/wol": "^1.0.3",
         "@typescript-eslint/eslint-plugin": "^6.4.1",
         "@typescript-eslint/parser": "^6.4.1",
-        "fs-extra": "^11.2.0",
         "eslint": "^8.42.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-prettier": "^5.0.0",
         "eslint-plugin-simple-import-sort": "^10.0.0",
+        "fs-extra": "^11.2.0",
         "husky": "^8.0.0",
         "jest-fetch-mock": "^3.0.3",
         "lint-staged": "^13.2.2",
@@ -96,6 +96,7 @@
         "prettier-eslint": "^16.2.0",
         "swagger-autogen": "^2.23.6",
         "ts-jest": "^29.1.1",
+        "tsx": "^4.7.0",
         "typescript": "^5.3.3"
     },
     "lint-staged": {
