unless-stopped restart policy

--- a/deploy/embassy-api/docker-compose.yml
+++ b/deploy/embassy-api/docker-compose.yml
@@ -12,6 +12,7 @@ services:
             - ./static:/app/static
         env_file:
             - .env
+        restart: unless-stopped
         command: ["npm", "run", "start-service:ci"]
 
 volumes:
