--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "author": "Nick Kiselev",
     "license": "ISC",
     "dependencies": {
+        "@aws-sdk/client-rekognition": "^3.540.0",
+        "@aws-sdk/client-s3": "^3.540.0",
         "better-sqlite3": "^8.0.1",
         "chartjs-to-image": "^1.1.0",
         "config": "^3.3.8",
