--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "pretty": "prettier --write '**/*.{ts,js}'",
         "test": "jest",
         "test:ci": "jest --collectCoverage",
-        "swagger": "npx ts-node ./api/swagger.ts"
+        "swagger": "npx ts-node ./api/bot/swagger.ts"
     },
     "author": "Nick Kiselev",
     "license": "ISC",
