--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Hacker Embassy management bot",
     "main": "bot.js",
     "scripts": {
-        "build": "tsc --skipLibCheck",
+        "build": "tsc --skipLibCheck && tsc-alias",
         "postbuild": "node scripts/postBuild.mjs",
         "start": "node dist/bot.js",
         "start:ci": "node bot.js",
@@ -98,6 +98,7 @@
         "prettier-eslint": "^16.2.0",
         "swagger-autogen": "^2.23.6",
         "ts-jest": "^29.1.1",
+        "tsc-alias": "^1.8.10",
         "tsx": "^4.7.0",
         "typescript": "^5.3.3"
     },
