--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "crypto-convert": "^2.1.4",
         "d": "^1.0.1",
         "dotenv": "^16.0.3",
+        "drizzle-orm": "^0.31.4",
         "easy-currencies": "^1.7.0",
         "express": "^4.18.2",
         "fast-csv": "^4.3.6",
@@ -84,6 +85,7 @@
         "@types/wol": "^1.0.3",
         "@typescript-eslint/eslint-plugin": "^6.4.1",
         "@typescript-eslint/parser": "^6.4.1",
+        "drizzle-kit": "^0.22.8",
         "eslint": "^8.42.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-import-resolver-typescript": "^3.6.1",
