--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
             - GUESTKEY=$GUESTKEY
             - HACKERGOOGLEAPIKEY=$HACKERGOOGLEAPIKEY
             - OPENAIAPIKEY=$OPENAIAPIKEY
-            - WIKIJSAPIKEY=$WIKIJSAPIKEY
+            - WIKIAPIKEY=$WIKIAPIKEY
 volumes:
     data:
         name: "hackerembassy-bot-data"
