--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "drizzle-orm": "^0.31.4",
         "easy-currencies": "^1.7.0",
         "express": "^4.18.2",
+        "express-prometheus-middleware": "^1.2.0",
         "fast-csv": "^4.3.6",
         "i18next": "^23.1.0",
         "i18next-fs-backend": "^2.1.5",
@@ -72,6 +73,7 @@
         "@types/config": "^3.3.0",
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
+        "@types/express-prometheus-middleware": "^1.2.3",
         "@types/fs-extra": "^11.0.4",
         "@types/jest": "^29.5.4",
         "@types/luxon": "^3.3.2",
