Fix tsc-alias issue with converting node_modules packages to relative paths

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,13 @@
             "@hackemapi/*": ["api/*"],
       }   
     },
+    "tsc-alias": {
+      "replacers": {
+        "base-url": {
+          "enabled": false
+        }
+      }
+    },
     "include": ["./**/*"],
     "exclude": ["node_modules", "coverage", "dist"]
 }
