--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "local-devices": "^4.0.0",
         "luci-rpc": "^1.0.5",
         "luxon": "^3.4.3",
+        "memoizee": "^0.4.17",
         "mqtt": "^4.3.7",
         "node-fetch": "^2.6.8",
         "node-html-markdown": "^1.3.0",
@@ -76,6 +77,7 @@
         "@types/fs-extra": "^11.0.4",
         "@types/jest": "^29.5.4",
         "@types/luxon": "^3.3.2",
+        "@types/memoizee": "^0.4.11",
         "@types/node": "^20.10.0",
         "@types/node-fetch": "^2.6.4",
         "@types/node-rsa": "^1.1.1",
