--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ HASSTOKEN=""
 HACKERGOOGLEAPIKEY=""
 OPENAIAPIKEY=""
 WIKIAPIKEY=""
+OUTLINE_SIGNING_SECRET=""
 UNIFIUSER=""
 UNIFIPASSWORD=""
 AWS_ACCESS_KEY_ID=""
