--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
         "test": "jest",
         "test:ci": "jest --collectCoverage",
         "swagger": "npx ts-node ./api/bot/swagger.ts",
-        "init": "tsx ./scripts/initDev.ts"
+        "init": "tsx ./scripts/initDev.ts",
+        "migrations": "npx drizzle-kit generate"
     },
     "author": "Nick Kiselev",
     "license": "ISC",
@@ -40,7 +41,7 @@
         "d": "^1.0.2",
         "dotenv": "^16.4.5",
         "drizzle-kit": "^0.30.1",
-        "drizzle-orm": "^0.38.2",
+        "drizzle-orm": "^0.38.3",
         "easy-currencies": "^1.8.1",
         "express": "^4.21.0",
         "express-prometheus-middleware": "^1.2.0",
