Move voice conversion to ffmpeg on hass

--- a/deploy/embassy-api/docker-compose.yml
+++ b/deploy/embassy-api/docker-compose.yml
@@ -10,6 +10,7 @@ services:
             - data-volume:/app/data/db
             - ./sec:/app/config/sec
             - ./static:/app/static
+            - /root/.ssh:/root/.ssh
         env_file:
             - .env
         restart: unless-stopped
