--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "node-ssh": "^13.2.0",
         "node-telegram-bot-api": "^0.66.0",
         "nodemon": "^3.1.7",
+        "openai": "^4.83.0",
         "ping": "^0.4.4",
         "rm": "^0.1.8",
         "rrule": "^2.8.1",
