--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "hackerembassy-tg-bot",
-    "version": "4.0.0",
+    "version": "5.0.0",
     "description": "Hacker Embassy management bot",
-    "main": "bot.js",
+    "main": "bot.ts",
     "scripts": {
         "build": "tsc --skipLibCheck && tsc-alias",
         "postbuild": "node scripts/postBuild.mjs",
@@ -33,82 +33,87 @@
     "author": "Nick Kiselev",
     "license": "ISC",
     "dependencies": {
-        "better-sqlite3": "^11.3.0",
+        "better-sqlite3": "^11.9.1",
         "chartjs-to-image": "^1.2.2",
         "config": "^3.3.12",
         "cors": "^2.8.5",
         "cron": "^4.3.0",
         "crypto-convert": "^2.1.7",
         "d": "^1.0.2",
-        "dotenv": "^16.4.5",
-        "drizzle-kit": "^0.30.1",
-        "drizzle-orm": "^0.38.3",
-        "easy-currencies": "^1.8.1",
-        "express": "^4.21.0",
-        "express-prometheus-middleware": "^1.2.0",
-        "fast-csv": "^4.3.6",
-        "i18next": "^23.15.1",
-        "i18next-fs-backend": "^2.3.2",
+        "dotenv": "^16.5.0",
+        "drizzle-kit": "^0.31.0",
+        "drizzle-orm": "^0.43.1",
+        "easy-currencies": "^1.8.3",
+        "express": "^5.1.0",
+        "express-prom-bundle": "^8.0.0",
+        "fast-csv": "^5.0.2",
+        "i18next": "^25.0.1",
+        "i18next-fs-backend": "^2.6.0",
         "local-devices": "^4.0.0",
         "luci-rpc": "^1.0.5",
-        "luxon": "^3.5.0",
+        "luxon": "^3.6.1",
         "memoizee": "^0.4.17",
-        "mqtt": "^4.3.8",
-        "node-fetch": "^2.7.0",
+        "mqtt": "^5.11.1",
+        "node-fetch": "^3.3.2",
         "node-html-markdown": "^1.3.0",
         "node-rsa": "^1.1.1",
-        "node-ssh": "^13.2.0",
+        "node-ssh": "^13.2.1",
         "node-telegram-bot-api": "^0.66.0",
-        "nodemon": "^3.1.7",
+        "nodemon": "^3.1.10",
         "ping": "^0.4.4",
+        "prom-client": "^15.1.3",
         "reflect-metadata": "^0.2.2",
         "rm": "^0.1.8",
         "rrule": "^2.8.1",
         "swagger-ui-express": "^5.0.1",
         "tmp-promise": "^3.0.3",
         "ts-node": "^10.9.2",
-        "winston": "^3.14.2",
-        "winston-daily-rotate-file": "^4.7.1",
+        "winston": "^3.17.0",
+        "winston-daily-rotate-file": "^5.0.0",
         "wol": "^1.0.7"
     },
     "devDependencies": {
+        "@eslint/compat": "^1.2.8",
+        "@eslint/eslintrc": "^3.3.1",
+        "@eslint/js": "^9.25.1",
         "@jest/globals": "^29.7.0",
-        "@types/better-sqlite3": "^7.6.11",
+        "@types/better-sqlite3": "^7.6.13",
         "@types/config": "^3.3.5",
         "@types/cors": "^2.8.17",
-        "@types/express": "^4.17.21",
+        "@types/express": "^5.0.1",
         "@types/express-prometheus-middleware": "^1.2.3",
         "@types/fs-extra": "^11.0.4",
-        "@types/jest": "^29.5.13",
-        "@types/luxon": "^3.4.2",
-        "@types/memoizee": "^0.4.11",
-        "@types/node": "^20.16.10",
-        "@types/node-fetch": "^2.6.11",
+        "@types/jest": "^29.5.14",
+        "@types/luxon": "^3.6.2",
+        "@types/memoizee": "^0.4.12",
+        "@types/node": "^22.15.2",
+        "@types/node-fetch": "^2.6.12",
         "@types/node-rsa": "^1.1.4",
-        "@types/node-telegram-bot-api": "^0.64.7",
+        "@types/node-telegram-bot-api": "^0.64.8",
         "@types/ping": "^0.4.4",
         "@types/rrule": "^2.2.9",
-        "@types/swagger-ui-express": "^4.1.6",
+        "@types/swagger-ui-express": "^4.1.8",
         "@types/wol": "^1.0.4",
-        "@typescript-eslint/eslint-plugin": "^6.21.0",
-        "@typescript-eslint/parser": "^6.21.0",
-        "eslint": "^8.57.1",
-        "eslint-config-prettier": "^8.10.0",
-        "eslint-import-resolver-typescript": "^3.6.3",
+        "@typescript-eslint/eslint-plugin": "^8.31.0",
+        "@typescript-eslint/parser": "^8.31.0",
+        "eslint": "^9.25.1",
+        "eslint-config-prettier": "^10.1.2",
+        "eslint-import-resolver-typescript": "^4.3.4",
         "eslint-plugin-import": "^2.31.0",
-        "eslint-plugin-prettier": "^5.2.1",
-        "fs-extra": "^11.2.0",
-        "husky": "^8.0.3",
+        "eslint-plugin-prettier": "^5.2.6",
+        "fs-extra": "^11.3.0",
+        "globals": "^16.0.0",
+        "husky": "^9.1.7",
         "jest-fetch-mock": "^3.0.3",
-        "lint-staged": "^13.3.0",
-        "nock": "^13.5.5",
+        "lint-staged": "^15.5.1",
+        "nock": "^14.0.4",
         "npm-run-all": "^4.1.5",
-        "prettier-eslint": "^16.3.0",
+        "prettier-eslint": "^16.4.1",
         "swagger-autogen": "^2.23.7",
-        "ts-jest": "^29.2.5",
-        "tsc-alias": "^1.8.10",
-        "tsx": "^4.19.1",
-        "typescript": "^5.6.2"
+        "ts-jest": "^29.3.2",
+        "tsc-alias": "^1.8.15",
+        "tsx": "^4.19.3",
+        "typescript": "^5.8.3"
     },
     "lint-staged": {
         "**/*.{js,jsx,ts,tsx}": [
