Get streamed response from external Ollama

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ SONAR_TOKEN=""
 HASSTOKEN=""
 HACKERGOOGLEAPIKEY=""
 OPENAIAPIKEY=""
+OLLAMAAPIKEY=""
 WIKIAPIKEY=""
 OUTLINE_SIGNING_SECRET=""
 UNIFIUSER=""
