--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
             - UNLOCKKEY=$UNLOCKKEY
             - HACKERGOOGLEAPIKEY=$HACKERGOOGLEAPIKEY
             - OPENAIAPIKEY=$OPENAIAPIKEY
+            - OLLAMAAPIKEY=$OLLAMAAPIKEY
             - WIKIAPIKEY=$WIKIAPIKEY
             - OUTLINE_SIGNING_SECRET=$OUTLINE_SIGNING_SECRET
         ports:
