Use split2 for streaming complete json objects

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "reflect-metadata": "^0.2.2",
         "rm": "^0.1.8",
         "rrule": "^2.8.1",
+        "split2": "^4.2.0",
         "swagger-ui-express": "^5.0.1",
         "tmp-promise": "^3.0.3",
         "ts-node": "^10.9.2",
@@ -92,6 +93,7 @@
         "@types/node-telegram-bot-api": "^0.64.8",
         "@types/ping": "^0.4.4",
         "@types/rrule": "^2.2.9",
+        "@types/split2": "^4.2.3",
         "@types/swagger-ui-express": "^4.1.8",
         "@types/wol": "^1.0.4",
         "@typescript-eslint/eslint-plugin": "^8.31.0",
