Make slapp personal

--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
         "express": "^5.1.0",
         "express-prom-bundle": "^8.0.0",
         "fast-csv": "^5.0.2",
+        "gifwrap": "^0.10.1",
         "i18next": "^25.0.1",
         "i18next-fs-backend": "^2.6.0",
+        "jimp": "^1.6.0",
         "local-devices": "^4.0.0",
         "luci-rpc": "^1.0.5",
         "luxon": "^3.6.1",
